fix: update published-by text color to avoid contrast clashing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -995,7 +995,7 @@ input[type=range]::-webkit-slider-thumb:active{
 /* Each article page */
 
 .published-by{
-    color: #818181;
+    color: #595959;
 }
 
 .article-full{
